# iridium-sniffer

./: ARCHITECTURE.md  CMakeLists.txt  README.md  basestation.c  bladerf.c  burst_detect.c  burst_downmix.c  config.h.in  frame_decode.c  frame_decode.h  gsmtap.c  hackrf.c  ida_decode.c  ida_decode.h  iridiumview.c  iridiumview.h  main.c  net_util.h  options.c  qpsk_demod.c  sbd_acars.c  sdr.h  sdrplay.c  sdrplay.h  sigmf.c  sigmf.h  soapysdr.c  usrp.c  vita49.c  vita49.h  voice_decode.c  voice_decode.h  waypoint_db.c  waypoint_db.h  web_map.c  web_map.h
codec/: LICENSE
data/: waypoints.csv
demo/: iridiumview-demo.html
models/: TRAINING.md  iridiumview_cir.tflite
opencl/: burst_fft.c  burst_fft.h
vulkan/: burst_fft.c
